Add_featured_mugs_and_product_card

--- a/src/input.css
+++ b/src/input.css
@@ -36,3 +36,11 @@
 .ct-subheadline-label {
     @apply  uppercase mx-4 font-bold text-xs text-gray-500 text-center tracking-widest;
 }
+/* 
+.ct-on-sale {
+    @apply ;
+} */
+
+.ct-button {
+    @apply text-center uppercase tracking-wider py-5 px-4 text-xs font-bold cursor-pointer hover:opacity-95;
+}
